--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@
       </div>
       <div id="result" class="hidden"></div>
     </div>
-    <script src="script.js"></script>
+    <script src="0.js"></script>
   </body>
 </html>
